login css improvement

--- a/e-commerce-frontend/src/app/login/login.component.html
+++ b/e-commerce-frontend/src/app/login/login.component.html
@@ -17,7 +17,8 @@
           </div>
           <br>
           <br>
-          <p-button type="submit" label="Login" class="p-button-success"></p-button>
+          <p-button type="submit" label="Login" icon="pi pi-sign-in" class="p-button-success"></p-button>
+          
           <p-button type="button"  label="Register" icon="pi pi-plus"  [routerLink]="['../account/register']" ></p-button>
         
       </form>
