--- a/e-commerce-frontend/src/app/login/login.component.css
+++ b/e-commerce-frontend/src/app/login/login.component.css
@@ -5,7 +5,7 @@ body {
   }
   body > *  {
     margin: auto;
-    margin-top: 5%;
+    margin-top: 2%;
     width: 20%;
     display: block;
     overflow: auto;
@@ -16,4 +16,9 @@ body {
   }
 p-button{
   margin: 2px;
+}
+
+a{
+  text-decoration: none;
+  color:firebrick;
 }
