--- a/e-commerce-frontend/src/app/home/home.component.html
+++ b/e-commerce-frontend/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<p>Welcome to Am4z0n, please login to view the catalog and do some shopping :)</p>
+<div>
+    <h1>Welcome to Am4z0n!</h1>
+    <!--<div><p>Please login to view the catalog and to add products to your cart :)</p></div>-->
+</div>
 
 
