--- a/e-commerce-frontend/src/app/app.component.css
+++ b/e-commerce-frontend/src/app/app.component.css
@@ -27,8 +27,6 @@
     padding-left: 50px;
     padding-right: 50px;
     font-size: medium;
-    background-color: #232f3e;
-    margin-bottom: 20px;
   }
   
   nav {
@@ -48,6 +46,8 @@
   footer {
     grid-area: footer;
     padding-bottom: 1px;
+    color: white;
+    text-shadow:1px 1px 2px black;
   }
 
    /*----------grid settings----------*/
