--- a/e-commerce-frontend/src/app/cart/cart.component.html
+++ b/e-commerce-frontend/src/app/cart/cart.component.html
@@ -44,7 +44,9 @@
     </p-table>
 
 
+    <div class="total">
     <h3>Total: {{total | currency: 'USD'}}</h3>
+    </div>
     <p-confirmDialog [style]="{width: '50vw'}" 
     [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
     <p-button (click)="confirm()" icon="pi pi-check" label="Buy" styleClass="mr-2"></p-button>
