--- a/e-commerce-frontend/src/styles.css
+++ b/e-commerce-frontend/src/styles.css
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-body{
+body {
     font-family: 'Trebuchet MS', sans-serif;
+
+    background-image: url("https://static.vecteezy.com/system/resources/previews/001/410/750/original/cyber-monday-happy-shopping-background-free-vector.jpg");
+    background-color: #cccccc;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    align-items: center;
+    justify-content: center;
+
+
 }
