--- a/e-commerce-frontend/src/app/home/home.component.css
+++ b/e-commerce-frontend/src/app/home/home.component.css
@@ -13,6 +13,7 @@ div > h1 {
     text-transform: uppercase;
     text-align: center;
     margin-top: 120px;
+    -webkit-text-stroke: 2px black;
 }
 
 
