--- a/e-commerce-frontend/src/app/account-register/account-register.component.css
+++ b/e-commerce-frontend/src/app/account-register/account-register.component.css
@@ -15,7 +15,7 @@ body {
   form div {
     margin: 5px;
     display: inline-block;
-    margin: 5px;
+    margin-top: 25px;
 }
   body > script {
     display: none
