--- a/e-commerce-frontend/src/app/accounts-list/accounts-list.component.html
+++ b/e-commerce-frontend/src/app/accounts-list/accounts-list.component.html
@@ -39,6 +39,6 @@
         <ng-template pTemplate="summary">
         </ng-template>
     </p-table>
-    <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text" key="delete">
+    <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text">
     </p-confirmDialog>
 </div>
