--- a/e-commerce-frontend/src/app/nav/nav.component.html
+++ b/e-commerce-frontend/src/app/nav/nav.component.html
@@ -4,6 +4,6 @@
     </ul>
 </nav>
 
-<p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text" key="deletenav">
+<p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text">
 </p-confirmDialog>
 
